--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile 'net.wuerl.kotlin:assertj-core-kotlin:0.1.2'
+    testCompile 'org.assertj:assertj-core:3.5.2'
     testCompile 'org.jetbrains.spek:spek-api:1.0.89'
     testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.0.89'
 
