--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.5.2'
     testCompile 'org.jetbrains.spek:spek-api:1.0.89'
     testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.0.89'
+    testCompile "org.junit.platform:junit-platform-runner:1.0.0-M2"
 
 }
