--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,18 @@
-//clean {
-//    delete 'out' // could be too harsh
-//}
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "com.adarshr:gradle-test-logger-plugin:1.1.2"
+    }
+}
+
+allprojects {
+    apply plugin: "com.adarshr.test-logger"
+
+    testlogger {
+        theme 'mocha'
+    }
+}
