--- a/2017/build.gradle
+++ b/2017/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile 'org.assertj:assertj-core:3.5.2'
+    compile 'org.magicwerk:brownies-collections:0.9.13'
 }
 
 clean {
