--- a/2015/day1/WORKSPACE
+++ b/2015/day1/WORKSPACE
@@ -7,3 +7,13 @@ git_repository(
 load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kotlin_repositories", "kt_register_toolchains")
 kotlin_repositories()
 kt_register_toolchains()
+
+maven_jar(
+    name = "assertj3_11_1",
+    artifact = "org.assertj:assertj-core:3.11.1",
+)
+
+maven_jar(
+    name = "junit4_12",
+    artifact = "junit:junit:jar:4.12",
+)
