--- a/2015/build.gradle
+++ b/2015/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.0'
+    ext.kotlin_version = '1.3.21'
 
     repositories {
         mavenCentral()
@@ -25,6 +25,7 @@ sourceSets {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'io.reactivex:rxkotlin:0.60.0'
+    implementation "io.reactivex:rxjava:1.3.8"
     compile project(':common')
 
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
